--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -5424,9 +5424,6 @@ button.bg-dark:focus {
 .position-fixed {
   position: fixed !important; }
 
-.position-sticky {
-  position: -webkit-sticky !important;
-  position: sticky !important; }
 
 .fixed-top {
   position: fixed;
@@ -5442,12 +5439,6 @@ button.bg-dark:focus {
   left: 0;
   z-index: 1030; }
 
-@supports ((position: -webkit-sticky) or (position: sticky)) {
-  .sticky-top {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    z-index: 1020; } }
 
 .sr-only {
   position: absolute;
@@ -7126,28 +7117,35 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 =======
 body {
-    background-color: #fff;
-    font-family: Arial, sans-serif;
+  background-color: #fff;
+  font-family: Arial, sans-serif;
 }
 .profile-container {
-    width: 400px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    text-align: center;
+  width: 400px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  text-align: center;
 }
 #profile-image {
-    width: 100px;
-    height: 100px;
-    margin: 0 auto;
-    background-size: cover;
-    border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  background-size: cover;
+  border-radius: 50%;
+  text-align: center;
 }
 .profile-info {
-    margin-top: 20px;
+  margin-top: 20px;
+  text-align: center;
 }
 .input-group {
-    margin-top: 20px;
+  margin-top: 20px;
+  text-align: center;
+}
+button {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
