--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -21,7 +21,7 @@
           <li class="nav-item"> <a class="nav-link" href="bungae_create">번개생성</a> </li>
           <li class="nav-item"> <a class="nav-link" href="bungae_list">번개목록</a> </li>
           <li class="nav-item"> <a class="nav-link" href="bungae_ing">참여목록</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="profile">프로필</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="profile" th:href="@{profile}">프로필</a> </li>
         </ul> <a class="btn navbar-btn ml-md-2 btn-light text-dark" href="login">로그인<br></a>
       </div>
     </div>
