--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="/css/profile.css">
+  <link rel="stylesheet" th:href="@{/css/profile.css}">
+  <script th:src="@{/js/profile.js}" type="text/javascript"></script>
 </head>
 
 <body>
@@ -25,34 +26,21 @@
       </div>
     </div>
   </nav>
-  <div class="pt-5 pb-5" style="">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12"><img class="img-fluid d-block rounded-circle mx-auto" src="https://static.pingendo.com/img-placeholder-3.svg" style="	width: 100px;	height: 100px;"></div>
-      </div>
-      <div class="row my-3">
-        <div class="col-md-12" style="">
-          <p class="lead text-center">???님의 평점은 ???점 입니다.</p>
-        </div>
-      </div>
-      <div class="row my-3">
-        <div class="col-md-12" style="">
-          <p class="lead text-center">자기소개</p>
-          <div class="row border border-dark">
-            <div class="col-md-12">
-              <p class="lead">강남 사는 26살입니다~</p>
-            </div>
-          </div>
-        </div>
-      </div>
+  <div id="errorContainer" style="display:block; color: red;"></div>
+  <div class="profile-container">
+    <img id="profile-image" alt="Profile Image" />
+
+    <div class="profile-info">
+      <h3 id="userNickname">사용자 이름</h3>
+      <p id="Age-Gender">나이/성별</p>
+      <p id="userReviewScore">평점란</p>
     </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center"><a class="btn btn-primary mx-3" href="#">프로필 수정</a><a class="btn btn-primary mx-3" href="#">리뷰 관리</a><a class="btn btn-primary mx-3" href="#">블랙리스트 관리</a></div>
-      </div>
+    <div class="input-group text-center">
+      <p id="userInfo" class="text-center align-items-center">자기소개란</p>
     </div>
+    <button th:onclick="|location.href='@{profile_edit}'|" class="btn btn-primary mx-3" type="button">프로필 수정</button><br>
+    <button class="btn btn-primary mx-3" type="button">후기 관리</button><br>
+    <button class="btn btn-primary mx-3" type="button">블랙리스트 관리</button><br>
   </div>
   <div class="py-3 border-top border-dark">
     <div class="container">
