--- a/src/main/resources/templates/profile_edit.html
+++ b/src/main/resources/templates/profile_edit.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" th:href="@{/css/editprofile.css}">
   <link rel="stylesheet" href="/css/profile_edit.css">
+  <script th:src="@{/js/editProfile.js}" ></script>
 </head>
 
 <body>
@@ -25,22 +28,32 @@
     </div>
   </div>
 </nav>
-  <div class="py-5 text-center">
-    <div class="container">
-      <div class="row">
-        <div class="mx-auto col-lg-6 col-10">
-          <h1>프로필 수정</h1>
-          <form class="text-left" style="">
-            <div class="form-group"> <label for="form16">닉네임</label> <input type="text" class="form-control" id="form16"> </div>
-            <div class="form-group"> <label for="form16">비밀번호</label> <input type="text" class="form-control" id="form16"> </div>
-            <div class="form-group"> <label for="form18">자기 소개</label> <input type="text" class="form-control" id="form18" style=""> </div>
-            <div class="form-group"> <label for="form18">프로필 사진</label> <input type="file" class="form-control-file" id="form18"> </div>
-            <button type="submit" class="btn btn-primary mt-3" style="	transform:  translateX(150px) ;">수정</button><button type="submit" class="btn btn-primary mt-3" style="	transform:  translateX(250px) ;">취소</button>
-          </form>
-        </div>
+<form name="editProfile" onsubmit="return updateForm()" enctype="multipart/form-data">
+
+  <div id="errorContainer" style="display:none; color: red;"></div>
+  <div class="profile-container">
+    <div class="form-group">
+      <img id="profile-image" alt="Profile Image" th:src="${userImage}" onload="checkImageSource()" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover;"/><br>
+      <div class="button-group">
+        <input type="file" id="image-upload" name="imageUpload" style="display: none;" onchange="previewImage(event)"><br>
+        <button type="button" onclick="document.getElementById('image-upload').click()">사진 업로드하기</button>
+      </div>
+      <div class="button-container">
+        <button type="button" id="delete-image-btn" onclick="deleteImage()" disabled>사진 삭제</button>
       </div>
     </div>
+
+    <div class="form-group">
+      <label for="nickname">닉네임</label>
+      <input type="text" id="nickname" name="nickname" class="form-control" placeholder="닉네임 입력란"/>
+    </div>
+    <div class="form-group">
+      <label for="userInfo">자기소개</label>
+      <textarea id="userInfo" name="userInfo" class="form-control" placeholder="자기소개 입력란"></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary btn-block">프로필 저장</button>
   </div>
+</form>
   <div class="py-3 border-top border-dark">
     <div class="container">
       <div class="row">
