--- a/src/main/resources/templates/bungaeForm.html
+++ b/src/main/resources/templates/bungaeForm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>createBungae</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/bungae.css}">
-    <script th:src="@{/js/bungae.js}" type="text/javascript"></script>
+    <script th:src="@{/js/bungae_create.js}" type="text/javascript"></script>
 </head>
 <body>
 <div class="container">
