--- a/src/main/resources/templates/bungae_list.html
+++ b/src/main/resources/templates/bungae_list.html
@@ -1,165 +1,106 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="/css/bungae_list.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+          type="text/css">
+    <link rel="stylesheet" href="/css/bungae_list.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script th:src="@{/js/bungae_list.js}" type="text/javascript"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md bg-primary navbar-light border-bottom border-dark" style="	height: 80px;">
-    <div class="container"> <a class="navbar-brand" href="#"><img src="/images/bungae.png" width="100" height="30" class="d-inline-block align-top" alt=""></a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar16">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar16">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"> <a class="nav-link" href="main">홈</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="map">지도</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="bungae_create">번개생성</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="bungae_list">번개목록</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="bungae_ing">참여목록</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="profile">프로필</a> </li>
-        </ul> <a class="btn navbar-btn ml-md-2 btn-light text-dark" href="login">로그인<br></a>
-      </div>
+<nav class="navbar navbar-expand-md bg-primary navbar-light border-bottom border-dark" style="	height: 80px;">
+    <div class="container"><a class="navbar-brand" href="#"><img src="/images/bungae.png" width="100" height="30"
+                                                                 class="d-inline-block align-top" alt=""></a>
+        <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
+                data-target="#navbar16">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar16">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="main">홈</a></li>
+                <li class="nav-item"><a class="nav-link" href="map">지도</a></li>
+                <li class="nav-item"><a class="nav-link" href="bungae_create">번개생성</a></li>
+                <li class="nav-item"><a class="nav-link" href="bungae_list">번개목록</a></li>
+                <li class="nav-item"><a class="nav-link" href="bungae_ing">참여목록</a></li>
+                <li class="nav-item"><a class="nav-link" href="profile">프로필</a></li>
+            </ul>
+            <a class="btn navbar-btn ml-md-2 btn-light text-dark" href="login">로그인<br></a>
+        </div>
     </div>
-  </nav>
-  <div class="my-3">
+</nav>
+<div class="my-3">
     <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1 class="text-center mb-3">번개 목록</h1>
-          <form class="form-inline d-flex justify-content-center">
-            <div class="input-group">
-              <input type="text" class="form-control form-control-lg" id="inlineFormInputGroup" placeholder="Search" style="	width: 600px;">
-              <div class="input-group-append"><button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button></div>
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="text-center mb-3">번개 목록</h1>
+                <form class="form-inline d-flex justify-content-center">
+                    <div class="input-group">
+                        <input type="text" class="form-control form-control-lg" id="inlineFormInputGroup"
+                               placeholder="Search" style="	width: 600px;">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
+                        </div>
+                    </div>
+                </form>
             </div>
-          </form>
         </div>
-      </div>
     </div>
-  </div>
-  <div class="" style="">
+</div>
+<div class="" style="">
     <div class="container">
-      <div class="row d-flex flex-row pb-5 justify-content-start" style="">
-        <div class="col-md-6" style="">
-          <div class="list-group" style="">
-            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="row">
-                <div class="col-md-4"><img class="d-block img-fluid" src="https://static.pingendo.com/img-placeholder-1.svg"></div>
-                <div class="col-md-8" style="">
-                  <div class="d-flex w-100 justify-content-between">
-                    <h5 class="my-2">(번개명)</h5>
-                  </div>
-                  <p class="text-left">일시</p>
-                  <p class="text-left">장소</p>
-                  <p class="text-left">인원</p>
+        <div class="row d-flex flex-row pb-5 justify-content-start" style="">
+            <div class="col-md-6" style="">
+                <div class="list-group" id="bungae-list-left" style="">
                 </div>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start" style="">
-              <div class="row">
-                <div class="col-md-4"><img class="d-block img-fluid" src="https://static.pingendo.com/img-placeholder-1.svg"></div>
-                <div class="col-md-8" style="">
-                  <div class="d-flex w-100 justify-content-between">
-                    <h5 class="my-2">(번개명)</h5>
-                  </div>
-                  <p class="text-left">일시</p>
-                  <p class="text-left">장소</p>
-                  <p class="text-left">인원</p>
+            </div>
+            <div class="col-md-6" style="">
+                <div class="list-group" id="bungae-list-right" style="">
                 </div>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start" style="">
-              <div class="row">
-                <div class="col-md-4"><img class="d-block img-fluid" src="https://static.pingendo.com/img-placeholder-1.svg"></div>
-                <div class="col-md-8" style="">
-                  <div class="d-flex w-100 justify-content-between">
-                    <h5 class="my-2">(번개명)</h5>
-                  </div>
-                  <p class="text-left">일시</p>
-                  <p class="text-left">장소</p>
-                  <p class="text-left">인원</p>
-                </div>
-              </div>
-            </a>
-          </div>
+            </div>
         </div>
-        <div class="col-md-6" style="">
-          <div class="list-group" style="">
-            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="row">
-                <div class="col-md-4"><img class="d-block img-fluid" src="https://static.pingendo.com/img-placeholder-1.svg"></div>
-                <div class="col-md-8" style="">
-                  <div class="d-flex w-100 justify-content-between">
-                    <h5 class="my-2">(번개명)</h5>
-                  </div>
-                  <p class="text-left">일시</p>
-                  <p class="text-left">장소</p>
-                  <p class="text-left">인원</p>
-                </div>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start" style="">
-              <div class="row">
-                <div class="col-md-4"><img class="d-block img-fluid" src="https://static.pingendo.com/img-placeholder-1.svg"></div>
-                <div class="col-md-8" style="">
-                  <div class="d-flex w-100 justify-content-between">
-                    <h5 class="my-2">(번개명)</h5>
-                  </div>
-                  <p class="text-left">일시</p>
-                  <p class="text-left">장소</p>
-                  <p class="text-left">인원</p>
-                </div>
-              </div>
-            </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start" style="">
-              <div class="row">
-                <div class="col-md-4"><img class="d-block img-fluid" src="https://static.pingendo.com/img-placeholder-1.svg"></div>
-                <div class="col-md-8" style="">
-                  <div class="d-flex w-100 justify-content-between">
-                    <h5 class="my-2">(번개명)</h5>
-                  </div>
-                  <p class="text-left">일시</p>
-                  <p class="text-left">장소</p>
-                  <p class="text-left">인원</p>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
-  <div class="py-3 border-top border-dark">
+</div>
+<div class="py-3 border-top border-dark">
     <div class="container">
-      <div class="row">
-        <div class="col-md-6" style=""><img src="/images/bungae.png" width="100" height="30" class="d-inline-block align-top" alt=""></div>
-        <div class="col-md-6 text-center d-md-flex align-items-center">
-          <ul class="nav mx-md-auto d-flex justify-content-center">
-            <li class="nav-item"> <a class="nav-link active" href="#">Home</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#">Features</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#">Pricing</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
-          </ul>
-          <div class="row">
-            <div class="col-md-12 d-flex align-items-center justify-content-md-between justify-content-center my-2"> <a href="#">
-                <i class="d-block fa fa-facebook-official text-muted fa-lg mx-2"></i>
-              </a> <a href="#">
-                <i class="d-block fa fa-instagram text-muted fa-lg mx-2"></i>
-              </a> <a href="#">
-                <i class="d-block fa fa-twitter text-muted fa-lg ml-2"></i>
-              </a> </div>
-          </div>
+        <div class="row">
+            <div class="col-md-6" style=""><img src="/images/bungae.png" width="100" height="30"
+                                                class="d-inline-block align-top" alt=""></div>
+            <div class="col-md-6 text-center d-md-flex align-items-center">
+                <ul class="nav mx-md-auto d-flex justify-content-center">
+                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                </ul>
+                <div class="row">
+                    <div class="col-md-12 d-flex align-items-center justify-content-md-between justify-content-center my-2">
+                        <a href="#">
+                            <i class="d-block fa fa-facebook-official text-muted fa-lg mx-2"></i>
+                        </a> <a href="#">
+                        <i class="d-block fa fa-instagram text-muted fa-lg mx-2"></i>
+                    </a> <a href="#">
+                        <i class="d-block fa fa-twitter text-muted fa-lg ml-2"></i>
+                    </a></div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <p class="mt-2 mb-0" contenteditable="true">© 2024 CodeNinja. All rights reserved</p>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <p class="mt-2 mb-0" contenteditable="true">© 2024 CodeNinja. All rights reserved</p>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
