Feat: bungae, bungae_member, chat_message DB 삽입

--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <meta charset="utf-8">
@@ -18,10 +18,10 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"> <a class="nav-link" href="main">홈</a> </li>
           <li class="nav-item"> <a class="nav-link" href="map">지도</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="bungae_create">번개생성</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="bungaeForm" th:href="@{bungae/bungaeForm}">번개생성</a> </li>
           <li class="nav-item"> <a class="nav-link" href="bungae_list">번개목록</a> </li>
           <li class="nav-item"> <a class="nav-link" href="bungae_ing">참여목록</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="profile">프로필</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="profile" th:href="@{profile}">프로필</a> </li>
         </ul> <a class="btn navbar-btn ml-md-2 btn-light text-dark" href="login">로그인<br></a>
       </div>
     </div>
