--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -39,7 +39,7 @@
       <p id="userInfo" class="text-center align-items-center">자기소개란</p>
     </div>
     <button th:onclick="|location.href='@{profile_edit}'|" class="btn btn-primary mx-3" type="button">프로필 수정</button><br>
-    <button class="btn btn-primary mx-3" type="button">후기 관리</button><br>
+    <button th:onclick="|location.href='@{chat}'|"class="btn btn-primary mx-3" type="button">후기 관리</button><br>
     <button class="btn btn-primary mx-3" type="button">블랙리스트 관리</button><br>
   </div>
   <div class="py-3 border-top border-dark">
