--- a/src/main/resources/templates/chatting.html
+++ b/src/main/resources/templates/chatting.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="/css/chatting.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script th:src="@{/js/chat.js}" type="text/javascript"></script>
 </head>
 
 <body style="">
@@ -25,7 +27,8 @@
       </div>
     </div>
   </nav>
-  <div class="py-3" style="">
+
+  <div class="py-3">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -34,25 +37,24 @@
       </div>
     </div>
   </div>
-  <div class="mb-3">
-    <div class="text-center container d-flex flex-row justify-content-center">
-      <div class="row text-center border border-dark" style="	width: 600px;	height: 600px;"></div>
-    </div>
-  </div>
-  <div class="">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <form class="form-inline text-center d-flex justify-content-center my-3">
-            <div class="input-group text-center">
-              <input type="text" class="form-control form-control-lg" placeholder="내용을 입력하세요." style="	width: 550px;">
-              <div class="input-group-append"><button class="btn btn-primary" type="button">전송</button></div>
-            </div>
-          </form>
+  <div class="container">
+    <div class="row justify-content-center mb-3">
+      <div class="col-md-8">
+        <div id="messageList" class="border border-dark" style="height: 400px; overflow-y: scroll;">
+          <!-- 메시지가 여기에 동적으로 추가 -->
         </div>
       </div>
     </div>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <form onsubmit="sendMessage(event)" class="form-inline justify-content-center">
+          <input type="text" id="messageInput" autocomplete="off" class="form-control form-control-lg mr-2" placeholder="내용을 입력하세요." style="flex-grow: 1;">
+          <button class="btn btn-primary" type="submit">전송</button>
+        </form>
+      </div>
+    </div>
   </div>
+
   <div class="py-3 border-top border-dark">
     <div class="container">
       <div class="row">
