--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -18,7 +18,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"> <a class="nav-link" href="main">홈</a> </li>
           <li class="nav-item"> <a class="nav-link" href="map">지도</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="bungae_create">번개생성</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="bungaeForm" th:href="@{bungae/bungaeForm}">번개생성</a> </li>
           <li class="nav-item"> <a class="nav-link" href="bungae_list">번개목록</a> </li>
           <li class="nav-item"> <a class="nav-link" href="bungae_ing">참여목록</a> </li>
           <li class="nav-item"> <a class="nav-link" href="profile" th:href="@{profile}">프로필</a> </li>
