--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -7123,3 +7123,8 @@ a.text-dark:hover, a.text-dark:focus {
   .table .thead-dark th {
     color: inherit;
     border-color: #dee2e6; } }
+
+#myloc{
+    position:absolute;
+    z-index:999;
+}
