--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="/css/map.css">
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3ee55d752effcbc08eda7914b122df74&libraries=services"></script>
 </head>
 
 
@@ -32,7 +33,7 @@
         <div class="col-md-4" style="">
           <form class="form-inline mx-auto my-2">
             <div class="input-group mx-auto">
-              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Search">
+              <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Search" style="width: 300px;" >
               <div class="input-group-append"><button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button></div>
             </div>
           </form>
@@ -77,7 +78,11 @@
             </a>
           </div>
         </div>
-        <div class="col-md-8" id="map" style="	height: 600px;"></div>
+        <div class="col-md-8 d-flex flex-row justify-content-end align-items-center" id="map" style="height: 600px;">
+          <div class="row">
+            <div class="col-md-12 mr-3" style="" ><span class="btn btn-primary d-flex justify-content-center align-items-center" href="#" style="	width: 30px;" id="myloc"><i class="fa fa-compass"></i></span></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -113,76 +118,77 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script>
+    var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+        mapOption = {
+            center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+            level: 3 // 지도의 확대 레벨
+        };
 
-<body>
-<div th:replace="layout/header :: header"></div>
-<main>
-<div id="map" style="width:100%;height:600px;"></div>
-<script>
-    navigator.geolocation.getCurrentPosition(function(position) {
-    var lat = position.coords.latitude,
-        lon = position.coords.longitude;
-    var mapOptions = {
-        center: new naver.maps.LatLng(lat, lon),
-        zoom: 15,
-        zoomControl: true,
-        zoomControlOptions: {
-        position: naver.maps.Position.TOP_RIGHT,
-        style: naver.maps.ZoomControlStyle.SMALL
+    // 지도를 생성합니다
+    var map = new kakao.maps.Map(mapContainer, mapOption);
+
+    // 지도에 확대 축소 컨트롤을 생성한다
+    var zoomControl = new kakao.maps.ZoomControl();
+
+    // 지도의 우측에 확대 축소 컨트롤을 추가한다
+    map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
+
+    // HTML5의 geolocation으로 사용할 수 있는지 확인합니다
+    if (navigator.geolocation) {
+
+        // GeoLocation을 이용해서 접속 위치를 얻어옵니다
+        navigator.geolocation.getCurrentPosition(function(position) {
+
+            var lat = position.coords.latitude, // 위도
+                lon = position.coords.longitude; // 경도
+
+            var locPosition = new kakao.maps.LatLng(lat, lon), // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
+                message = '<div style="padding:5px;">여기에 계신가요?!</div>'; // 인포윈도우에 표시될 내용입니다
+
+            // 마커와 인포윈도우를 표시합니다
+            displayMarker(locPosition, message);
+
+          });
+
+    } else { // HTML5의 GeoLocation을 사용할 수 없을 때 마커 표시 위치와 내용을 설정합니다
+
+        var locPosition = new kakao.maps.LatLng(33.450701, 126.570667),
+            message = 'geolocation을 사용할수 없어요..'
+
+        displayMarker(locPosition, message);
+    }
+
+    // 지도에 마커와 인포윈도우를 표시하는 함수입니다
+    function displayMarker(locPosition, message) {
+
+        // 마커를 생성합니다
+        var marker = new kakao.maps.Marker({
+            map: map,
+            position: locPosition
+        });
+
+        // 지도 중심좌표를 접속위치로 변경합니다
+        map.setCenter(locPosition);
+    }
+
+    // 버튼을 클릭하면 내 위치를 중심으로 지도화면 초기화
+    document.getElementById('myloc').addEventListener('click', function(e) {
+    e.preventDefault();
+
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function(position) {
+            var lat = position.coords.latitude,
+                lon = position.coords.longitude;
+            var locPosition = new kakao.maps.LatLng(lat, lon);
+
+            map.setCenter(locPosition);
+            });
+        } else {
+            alert('Unable to use geolocation.');
         }
-    };
-
-            var map = new naver.maps.Map('map', mapOptions);
-
-
-
-            var markerOptions = {
-                position: new naver.maps.LatLng(lat, lon),
-                map: map,
-                animation: naver.maps.Animation.DROP
-            };
-
-            var marker = new naver.maps.Marker(markerOptions);
-
-            var contentString = [
-                '<div class="iw_inner">',
-                '   <h3>test</h3>',
-                '   <p><br>',
-                '       <br>',
-                '       <br>',
-                '   </p>',
-                '</div>'
-            ].join('');
-
-
-
-            var infowindow = new naver.maps.InfoWindow({
-                content: contentString
-            });
-
-            naver.maps.Event.addListener(marker, "click", function(e) {
-                if (infowindow.getMap()) {
-                    infowindow.close();
-                } else {
-                    infowindow.open(map, marker);
-                }
-            });
-    var locationBtnHtml= '<a href="#" class="btn_mylct"><img class="target" src="/images/target.png"/></a>';
-    var customControl = new naver.maps.CustomControl(locationBtnHtml, {
-    position: naver.maps.Position.RIGHT_CENTER
     });
 
-            naver.maps.Event.once(map, 'init', function() {
-                customControl.setMap(map);
-                naver.maps.Event.addDOMListener(customControl.getElement(), 'click', function() {
-                    map.setCenter(new naver.maps.LatLng(lat, lon));
-                });
-            });
-        });
-</script>
-</main>
-<div th:replace="layout/footer :: footer"></div>
-
+  </script>
 </body>
-
 </html>
