Fix: 번개 장소 수정

--- a/src/main/resources/templates/bungae_create.html
+++ b/src/main/resources/templates/bungae_create.html
@@ -67,10 +67,8 @@
                                class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="latitude">위도:</label>
-                        <input type="text" id="latitude" name="latitude" required>
-                        <label for="longitude">경도:</label>
-                        <input type="text" id="longitude" name="longitude" required>
+                        <label for="bungaeLocation">번개 장소</label>
+                        <input type="text" id="bungaeLocation" name="bungaeLocation" required class="form-control">
                     </div>
                     <div class="form-group">
                         <label>연령대</label>
