--- a/src/main/resources/templates/bungae_create.html
+++ b/src/main/resources/templates/bungae_create.html
@@ -8,7 +8,8 @@
           type="text/css">
     <link rel="stylesheet" href="/css/bungae_create.css">
     <script th:src="@{/js/bungae_create.js}" type="text/javascript"></script>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3ee55d752effcbc08eda7914b122df74&libraries=services"></script>
+    <script type="text/javascript"
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3ee55d752effcbc08eda7914b122df74&libraries=services"></script>
 </head>
 
 <body>
@@ -37,7 +38,7 @@
         <div class="row">
             <div class="mx-auto col-lg-6 col-10">
                 <h1>번개 생성</h1>
-                <form th:action="@{/bungae/create_bungae}" method="post" enctype="multipart/form-data">
+                <form id="createBungaeForm" enctype="multipart/form-data">
                     <div class="form-group">
                         <label for="bungaeName">번개 모임명</label>
                         <input type="text" name="bungaeName" id="bungaeName" required class="form-control">
@@ -69,9 +70,9 @@
                     </div>
                     <div class="form-group">
                         <label>번개 위치</label>
-                        <input type="text" id="keyword" name="bungaeLoc" placeholder="키워드를 입력하세요" required
+                        <input type="text" id="keyword" name="keyword" placeholder="키워드를 입력하세요" required
                                class="form-control">
-                        <input type="hidden" id="address">
+                        <input type="hidden" id="address" name="address">
                         <ul id="placesList"></ul>
                     </div>
                     <div class="form-group">
@@ -140,7 +141,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 <script>
-    $('#keyword').change(function(){
+    $('#keyword').change(function () {
         searchPlaces();
     });
 
@@ -160,7 +161,7 @@
             return false;
         }
 
-        ps.keywordSearch( keyword, placesSearchCB);
+        ps.keywordSearch(keyword, placesSearchCB);
     }
 
     //장소검색이 완료됐을 때 호출되는 콜백함수
@@ -190,13 +191,13 @@
 
         removeAllChildNods(listEl);
 
-        for ( var i=0; i<places.length; i++ ) {
+        for (var i = 0; i < places.length; i++) {
 
             var itemEl = getListItem(i, places[i]);
 
             //장소를 선택했을 때 선택한 장소를 입력칸에 추가
-            (function(name, address){
-                itemEl.onclick = function(){
+            (function (name, address) {
+                itemEl.onclick = function () {
                     var key = document.getElementById('keyword');
                     var add = document.getElementById('address');
                     key.value = name;
@@ -205,7 +206,7 @@
                     removeAllChildNods(listEl);
 
                 }
-            })(places[i].place_name,places[i].road_address_name);
+            })(places[i].place_name, places[i].road_address_name);
 
             fragment.appendChild(itemEl);
         }
@@ -217,14 +218,14 @@
     function getListItem(index, places) {
 
         var el = document.createElement('li'),
-        itemStr = '<span class="markerbg marker_' + (index+1) + '"></span>' +
-                    '<div class="info">' +
-                    '   <span class = "info-title"><b>' + places.place_name + '</b></span>';
+            itemStr = '<span class="markerbg marker_' + (index + 1) + '"></span>' +
+                '<div class="info">' +
+                '   <span class = "info-title"><b>' + places.place_name + '</b></span>';
 
         if (places.road_address_name) {
             itemStr += '    <br><span class = "info-address"><small>' + places.road_address_name + '</small></span>'
         } else {
-            itemStr += '    <br><span class = "info-address"><small>' +  places.address_name  + '</small></span>';
+            itemStr += '    <br><span class = "info-address"><small>' + places.address_name + '</small></span>';
         }
 
         el.innerHTML = itemStr;
@@ -232,10 +233,11 @@
 
         return el;
     }
+
     //검색결과 목록의 자식 Element를 제거하는 함수
     function removeAllChildNods(el) {
         while (el.hasChildNodes()) {
-            el.removeChild (el.lastChild);
+            el.removeChild(el.lastChild);
         }
     }
 </script>
