--- a/src/main/resources/templates/chatting.html
+++ b/src/main/resources/templates/chatting.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="/css/chatting.css">
-  <script src="https://cdn.jsdelivr.net/npm/sockjs-client/dist/sockjs.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script th:src="@{/js/chat.js}" type="text/javascript"></script>
+  <link rel="stylesheet" th:href="@{/css/chatting_css.css}">
 </head>
 
 <body style="">
@@ -38,6 +36,7 @@
       </div>
     </div>
   </div>
+  <div id="errorMessage" style="color: red;"></div>
 
   <div class="container">
     <div class="row justify-content-center mb-3">
@@ -49,7 +48,7 @@
     </div>
     <div class="row justify-content-center">
       <div class="col-md-8">
-        <form onsubmit="sendMessage(event)" class="form-inline justify-content-center">
+        <form onsubmit="return sendMessage()" class="form-inline justify-content-center">
           <input type="text" id="message" autocomplete="off" class="form-control form-control-lg mr-2" placeholder="내용을 입력하세요." style="flex-grow: 1;">
           <button class="btn btn-primary" type="submit">전송</button>
         </form>
@@ -87,8 +86,10 @@
       </div>
     </div>
   </div>
-  <script th:src="@{/js/chat.js}" type="text/javascript"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sockjs-client/dist/sockjs.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="/js/chat.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 
