--- a/src/main/resources/templates/bungae_detail.html
+++ b/src/main/resources/templates/bungae_detail.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
           type="text/css">
     <link rel="stylesheet" href="/css/bungae_detail.css">
+    <script th:src="@{/js/bungae_detail.js}" type="text/javascript"></script>
 </head>
 
 <body>
@@ -84,8 +85,9 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-12 text-center mt-3"><a class="btn btn-primary mx-5" href="#">참가</a><a
-                    class="btn btn-primary mx-5" href="#">수정</a></div>
+            <div class="col-md-12 text-center mt-3">
+                <button type="button" id="go_chat" class="btn btn-primary mx-5">참가</button>
+                <a class="btn btn-primary mx-5" href="#">수정</a></div>
         </div>
     </div>
 </div>
