--- a/src/main/resources/static/css/chatting_css.css
+++ b/src/main/resources/static/css/chatting_css.css
@@ -79,3 +79,52 @@
     display: inline-block;
     max-width: 80%;
 }
+
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    /* background-color: rgba(0, 0, 0, 0.4); */
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%;
+}
+
+#mprofile-image {
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+    background-size: cover;
+    border-radius: 50%;
+    text-align: center;
+}
+.profile-info {
+    margin-top: 20px;
+    text-align: center;
+}
+.userInfo {
+    margin-top: 20px;
+    text-align: center;
+}
+.close {
+    color: #aaa;
+    float: left;
+    font-size: 28px;
+    cursor: pointer;
+}
+
+.close:hover {
+    color: black;
+    text-decoration: none;
+}
