--- a/src/main/resources/static/css/chatting.css
+++ b/src/main/resources/static/css/chatting.css
@@ -18,7 +18,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #00ff80;
+  --primary: #FFAB91;
   --secondary: #4f70ce;
   --success: #28a745;
   --info: #ccc;
@@ -1719,8 +1719,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #212529;
-  background-color: #00ff80;
-  border-color: #00ff80;
+  background-color: #FFAB91;
+  border-color: #FFAB91;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075); }
   .btn-primary:hover {
     color: #fff;
@@ -1730,8 +1730,8 @@ fieldset:disabled a.btn {
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(5, 222, 115, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #212529;
-    background-color: #00ff80;
-    border-color: #00ff80; }
+    background-color: #FFAB91;
+    border-color: #FFAB91; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
     color: #fff;
@@ -1910,22 +1910,22 @@ fieldset:disabled a.btn {
       box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(56, 56, 56, 0.5); }
 
 .btn-outline-primary {
-  color: #00ff80;
-  border-color: #00ff80; }
+  color: #FFAB91;
+  border-color: #FFAB91; }
   .btn-outline-primary:hover {
     color: #212529;
-    background-color: #00ff80;
-    border-color: #00ff80; }
+    background-color: #FFAB91;
+    border-color: #FFAB91; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     box-shadow: 0 0 0 0.2rem rgba(0, 255, 128, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #00ff80;
+    color: #FFAB91;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #212529;
-    background-color: #00ff80;
-    border-color: #00ff80; }
+    background-color: #FFAB91;
+    border-color: #FFAB91; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
       box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(0, 255, 128, 0.5); }
@@ -2315,7 +2315,7 @@ input[type="button"].btn-block {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #00ff80; }
+    background-color: #FFAB91; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     pointer-events: none;
@@ -2593,8 +2593,8 @@ input[type="button"].btn-block {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    border-color: #00ff80;
-    background-color: #00ff80;
+    border-color: #FFAB91;
+    background-color: #FFAB91;
     box-shadow: none; }
   .custom-control-input:focus ~ .custom-control-label::before {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(0, 255, 128, 0.25); }
@@ -2643,8 +2643,8 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #00ff80;
-  background-color: #00ff80;
+  border-color: #FFAB91;
+  background-color: #FFAB91;
   box-shadow: none; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -2818,7 +2818,7 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #00ff80;
+    background-color: #FFAB91;
     border: 0;
     border-radius: 1rem;
     box-shadow: 0 0.1rem 0.25rem rgba(0, 0, 0, 0.1);
@@ -2842,7 +2842,7 @@ input[type="button"].btn-block {
   .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #00ff80;
+    background-color: #FFAB91;
     border: 0;
     border-radius: 1rem;
     box-shadow: 0 0.1rem 0.25rem rgba(0, 0, 0, 0.1);
@@ -2869,7 +2869,7 @@ input[type="button"].btn-block {
     margin-top: 0;
     margin-right: 0.2rem;
     margin-left: 0.2rem;
-    background-color: #00ff80;
+    background-color: #FFAB91;
     border: 0;
     border-radius: 1rem;
     box-shadow: 0 0.1rem 0.25rem rgba(0, 0, 0, 0.1);
@@ -2964,7 +2964,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #00ff80; }
+  background-color: #FFAB91; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -3475,8 +3475,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #00ff80;
-  border-color: #00ff80; }
+  background-color: #FFAB91;
+  border-color: #FFAB91; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -3541,7 +3541,7 @@ input[type="button"].btn-block {
 
 .badge-primary {
   color: #212529;
-  background-color: #00ff80; }
+  background-color: #FFAB91; }
   a.badge-primary:hover, a.badge-primary:focus {
     color: #212529;
     background-color: #00cc66; }
@@ -3755,7 +3755,7 @@ input[type="button"].btn-block {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #00ff80;
+  background-color: #FFAB91;
   transition: width 0.6s ease; }
   @media (prefers-reduced-motion: reduce) {
     .progress-bar {
@@ -3820,8 +3820,8 @@ input[type="button"].btn-block {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #00ff80;
-    border-color: #00ff80; }
+    background-color: #FFAB91;
+    border-color: #FFAB91; }
 
 .list-group-horizontal {
   flex-direction: row; }
@@ -4656,7 +4656,7 @@ a.close.disabled {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #00ff80 !important; }
+  background-color: #FFAB91 !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
@@ -4756,7 +4756,7 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #00ff80 !important; }
+  border-color: #FFAB91 !important; }
 
 .border-secondary {
   border-color: #4f70ce !important; }
@@ -6984,7 +6984,7 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #00ff80 !important; }
+  color: #FFAB91 !important; }
 
 a.text-primary:hover, a.text-primary:focus {
   color: #00b35a !important; }
