--- a/src/main/resources/static/css/chatting.scss
+++ b/src/main/resources/static/css/chatting.scss
@@ -14,7 +14,7 @@ $enable-print-styles:       true;
 // Colors
 
 $theme-colors: (
-  primary: #00ff80,
+  primary: #FFAB91,
   secondary: #4f70ce,
   light: #f3f3f3,
   dark: #151515,
